compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__eq_scalar.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs, y: Int) {\n  case xs {\n    #(x) if x == y -> 1\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``

let go (xs: (int64)) (y: int64) = begin
    match xs with
    | (x) when x = y ->
        1L
    | _ ->
        0L
end
