compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__field_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n        pub type Person {\n          Person(username: String, name: String, age: Int)\n        }\n        pub fn go() {\n          let given_name = \"jack\"\n          let raiden = Person(\"raiden\", \"jack\", 31)\n          case given_name {\n            name if name == raiden.name -> \"It's jack\"\n            _ -> \"It's not jack\"\n          }\n        }\n        "
---
module rec my.``mod``

type Person = { username: string; name: string; age: int64 }
let go () = begin
    let given_name = "jack"
    let raiden = { username = "raiden"; name = "jack"; age = 31L }
    match given_name with
    | name when name = raiden.name ->
        "It's jack"
    | _ ->
        "It's not jack"
end
