compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__imported_ok.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "import gleam\npub type X {\n  Ok\n}\nfn func(x) {\n  case gleam.Ok {\n    _ if [] == [ gleam.Ok ] -> True\n    _ -> False\n  }\n}\n"
---
module rec my.``mod``
open gleam

type X =
| Ok
    
let private func<'a> (x: 'a) = begin
    match gleam.Ok with
    | _ when [] = [gleam.Ok] ->
        true
    | _ ->
        false
end
