compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__module_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn go() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
---
module rec my.``mod``
open package
let go () = begin
    let name = "Tony Stark"
    match name with
    | n when n = hero.ironman.name ->
        true
    | _ ->
        false
end
