compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__module_list_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn go() {\n            let names = [\"Tony Stark\", \"Bruce Wayne\"]\n            case names {\n              n if n == hero.heroes -> True\n              _ -> False\n            }\n          }\n        "
---
module rec my.``mod``
open package
let go () = begin
    let names = ["Tony Stark"; "Bruce Wayne"]
    match names with
    | n when n = hero.heroes ->
        true
    | _ ->
        false
end
