compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__module_nested_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn go() {\n            let name = \"Bruce Wayne\"\n            case name {\n              n if n == hero.batman.secret_identity.name -> True\n              _ -> False\n            }\n          }\n        "
---
module rec my.``mod``
open package
let go () = begin
    let name = "Bruce Wayne"
    match name with
    | n when n = hero.batman.secret_identity.name ->
        true
    | _ ->
        false
end
