compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__nested_record_access.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "\npub type A {\n  A(b: B)\n}\n\npub type B {\n  B(c: C)\n}\n\npub type C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``
type A = { b: B }
type B = { c: C }
type C = { d: bool }
let a (a: A) = begin
    match a with
    | _ when a.b.c.d ->
        1L
    | _ ->
        0L
end
