compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__not_eq_complex.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs, y) {\n  case xs {\n    #(x) if xs != y -> x\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``

let go (xs: (int64)) (y: (int64)) = begin
    match xs with
    | (x) when xs <> y ->
        x
    | _ ->
        0L
end
